added reverse pipe for practise

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
         <p style="font-size: 30px; font-weight: bold; text-shadow: 1px solid blueviolet;">Note Taking Made Easier</p>
         <p style="font-size: 12px; font-weight: 300; font-style: italic;">all of your notes in one place</p>
         <button>Get started</button>
+        <p>{{joinText | reverse}}</p>
 
     </div>
     <div class="home-images">
