--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
     </div>
   </div>
   <br><br>
-  <button type="submit" [disabled]="loginForm.invalid">Submit</button>
+  <button type="submit" [disabled]="loginForm.invalid">Login</button>
   <p>Don't have an account?<a href="/register"><span>Register</span></a></p>
 </form>
 
